# EDA-PR-CTICAS

./: FinalProject.cpp  main.cpp
Euclidean/: CMakeLists.txt
Euclidean/Euclidean/: CMakeLists.txt  Euclidean.cpp  Euclidean.h
K-means/: K-means.cpp  K-means.vcxproj  K-means.vcxproj.filters  data_set1.csv  output.csv  trying.py
K-means/Debug/: K-means.exe.recipe  vc142.idb
K-means/Debug/K-means.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  K-means.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PROYECTO FINAL/: FinalProject.cpp  README.md  dprocess.py  link_datasets.txt
QuadTreeCmake/: CMakeLists.txt
QuadTreeCmake/QuadTreeCmake/: CMakeLists.txt  QuadTreeCmake.cpp  QuadTreeCmake.h
QuadTreeCmake/quadTreeMap/: CMakeLists.txt
Rtree_Guttman/: CMakeLists.txt
Rtree_Guttman/Rtree_Guttman/: CMakeLists.txt  Rtree_Guttman.cpp  Rtree_Guttman.h
persistenceDataStr/: persistenceDataStr.cpp  persistenceDataStr.vcxproj  persistenceDataStr.vcxproj.filters
persistenceDataStr/Debug/: persistenceDataStr.exe.recipe  vc142.idb
persistenceDataStr/Debug/persiste.87639ee4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  persistenceDataStr.lastbuildstate
quadTreeMap/: data.txt  index.html
