# CMakeList.txt: proyecto de CMake para Euclidean, incluya el origen y defina
# la lógica específica del proyecto aquí.
#
cmake_minimum_required (VERSION 3.8)

# Agregue un origen al ejecutable de este proyecto.
add_executable (Euclidean "Euclidean.cpp" "Euclidean.h")

# TODO: Agregue pruebas y destinos de instalación si es necesario.
